Scrolling and wrapping fixees on editor

--- a/index.css
+++ b/index.css
@@ -116,6 +116,7 @@ button {
     outline:0;
     resize:none;
     overflow-y:visible;
+    overflow-x:scroll;
 }
 
 #highlighter {
@@ -132,6 +133,16 @@ button {
 
 /* Hide scrollbar for IE, Edge and Firefox */
 #editor {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
+}
+
+#editor-textarea::-webkit-scrollbar {
+    display: none;
+  }
+
+/* Hide scrollbar for IE, Edge and Firefox */
+#editor-textarea {
 -ms-overflow-style: none;  /* IE and Edge */
 scrollbar-width: none;  /* Firefox */
 }
